--- a/website/css/css3.css
+++ b/website/css/css3.css
@@ -6,6 +6,12 @@ h1, h2, h3, h4, h5, h6,
     font-family: 'upheavtt';
     text-align: center;
     text-transform: uppercase;
+    word-spacing: 0.5rem;
+    letter-spacing: 0.15rem;
+}
+.nav-item.nav-link{
+    word-spacing: 0;
+    letter-spacing: 0.05rem; 
 }
 .c-g{
     color: #008a00;
@@ -56,6 +62,61 @@ ul.three-d li{
     -o-transform: rotate(45deg);
     transform: rotate(45deg);
 }
+
+/*
+    Carousel
+ */
+.carousel, 
+.carousel-inner,
+.carousel-item {
+    height: 15rem;
+}
+
+.carousel {
+    width: 100%;
+    margin: -1.5rem auto 0;
+    z-index: 10;
+}
+.carousel-caption{
+    margin: 0;
+    padding: 0;
+    top: 1rem;
+    right: 10%;
+    left: 10%;
+}
+
+.carousel-indicators {
+  top: 1.5rem;
+  right: 1.5rem;
+  bottom: auto;
+  left: auto;
+  width: 1rem;
+  margin-left: 0;
+}
+
+.carousel-indicators > li {
+  margin-bottom: .25rem;
+}
+
+.carousel-control{
+    width: 10%;
+}
+
+.icon-left,
+.icon-right{
+    line-height: 8;
+}
+.icon-left{
+    text-align: left;
+}
+.icon-right{
+    text-align: right;
+}
+
+/*
+    navbar
+ */
+
 .navbar{
     margin-bottom: 0;
     border-bottom: .2rem solid #008a00;
@@ -114,7 +175,6 @@ section h2.heading{
 }
 .section-header {
     padding: 0;
-    /*height: 100vh;*/
     position: relative;
 }
 .section .parallax, 
@@ -149,8 +209,6 @@ section h2.heading{
     top: 0;
 }
 .section .content {
-    /*background-color: #f00;*/
-    /*padding-top: 6rem;*/
     padding-bottom: 6rem;
     margin-bottom: 0;
     position: relative;
@@ -175,8 +233,6 @@ section h2.heading{
     top: 0;
 }
 .section-header .content {
-    /*background-color: #f00;*/
-    /*padding-top: 6rem;*/
     padding-bottom: 6rem;
     margin-bottom: 0;
     position: relative;
@@ -195,10 +251,6 @@ section h2.heading{
     background-color: #000000;
     border-radius: 50%;
     margin: 0 auto;
-    /*width: 10rem;
-    height: 10rem;*/
-    /*width: 38%;
-    height: 38%;*/
     width: 50vw;
     height: 50vw;
     margin-top: 3rem;
@@ -236,89 +288,62 @@ a.scroll-arrow {
     About
  */
 .square{
-    /*width: 5rem;
-    height: 5rem;
-    background-color: #00a800;
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    transform: rotate(45deg);*/
     margin: 2rem auto;
+}
+#about-us-carousel .carousel-caption,
+#about-us-carousel .carousel-control{
+    color: #000;
+    text-shadow: none;
+}
+
+#about-us-carousel .carousel-indicators{
+    width: 4rem;
+    top: 100%;
+    left: calc(50% - 2rem);
+}
+#about-us-carousel .carousel-indicators li, 
+#about-us-carousel .carousel-indicators li.active {
+    border-radius: 0;
+    width: 10px;
+    height: 10px;
+    margin: 1px;
+    border-color: #000;
+}
+#about-us-carousel .carousel-indicators li.active{
+    background-color: #000;
+}
+
+#about-us-carousel .carousel-control{
+    background-image: none;
 }
 
 /*
  What We Do
  */
-section#what-we-do .parallax{
+/*section#what-we-do .parallax{
     height: 120vh;
-}
+}*/
 .what-we-do-pic{
     width: 15rem;
 }
 
-/* CUSTOMIZE THE CAROUSEL
--------------------------------------------------- */
-
-/* Carousel base class */
-.carousel, 
-.carousel-inner,
-.carousel-item {
-    height: 20rem;
-}
-
-.carousel {
-    width: 80vw;
-    margin: -1.5rem auto 0;
-    z-index: 10;
-}
-.carousel-inner{
+#what-we-do .carousel-inner{
     border: .2rem solid #008a00;
+    background-color: #000;
 }
-
-/* Declare heights because of positioning of img element */
-.carousel-item {
-  background-color: #000;
+#what-we-do-carousel.carousel, 
+#what-we-do-carousel .carousel-inner, 
+#what-we-do-carousel .carousel-item{
+    height: 25rem;
 }
-/*.carousel-item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 10rem;
-}*/
-.carousel-caption{
-    margin: 0;
-    padding: 0;
-    top: 1rem;
-    right: 10%;
-    left: 10%;
-}
-
-.carousel-indicators {
-  top: 1.5rem;
-  right: 1.5rem;
-  bottom: auto;
-  left: auto;
-  width: 1rem;
-  margin-left: 0;
-}
-
-.carousel-indicators > li {
-  margin-bottom: .25rem;
-}
-
-.carousel-control{
-    width: 10%;
-}
-#myCarousel .icon-left,
-#myCarousel .icon-right{
+#what-we-do-carousel .icon-left,
+#what-we-do-carousel .icon-right{
     line-height: 15;
 }
-#myCarousel .icon-left{
+#what-we-do-carousel .icon-left{
     text-align: left;
 }
-#myCarousel .icon-right{
+#what-we-do-carousel .icon-right{
     text-align: right;
 }
 
@@ -384,13 +409,19 @@ section#careers .parallax{
     border: .2rem solid #008a00;
     margin-bottom: 5rem;
 }
+.job-title{
+    min-height: 7rem;
+}
+#job-form{
+    min-height: 10rem;
+}
 
 /*
  job
  */
-#job {
+/*#job {
     z-index: 10;
-    /*background-image: url('../img/careersBg.jpg');*/
+    background-image: url('../img/careersBg.jpg');
 }
 #job .container{
     color: white;
@@ -402,15 +433,19 @@ section#careers .parallax{
     padding: 2rem;
     border: .2rem solid #008a00;
     margin-bottom: 5rem;
-}
+}*/
+
 
 /*
  contact us
  */
+section#contact-us{
+    height: 25rem;
+}
 .img-address{
     display: block;
     width: 20rem;
-    margin: -8rem auto 0;
+    margin: 0 auto ;
     position: relative;
     z-index: 11;
 }
@@ -449,7 +484,7 @@ footer{
  */
 section#what-we-do,
 section#what-we-do .parallax{
-    height: 70rem;
+    height: 85rem;
 }
 #what-we-do .content{
     top: 0;
@@ -457,7 +492,7 @@ section#what-we-do .parallax{
 }
 section#careers,
 section#careers .parallax{
-    height: 130rem;
+    height: 155rem;
 }
 #careers .content{
     top: 0;
@@ -512,24 +547,32 @@ section#job .parallax{
     .black-ball{
         padding: .5rem 2rem;
     }
+    
     .carousel, 
     .carousel-inner,
-    .carousel-item {
-        height: 10rem;
+    .carousel-item,
+    #what-we-do-carousel.carousel, 
+    #what-we-do-carousel .carousel-inner, 
+    #what-we-do-carousel .carousel-item{
+        height: 14rem;
     }
-    #myCarousel .icon-left,
-    #myCarousel .icon-right{
-        line-height: 7.5;
+    .icon-left,
+    .icon-right{
+        line-height: 8;
+    }
+    #what-we-do-carousel .icon-left,
+    #what-we-do-carousel .icon-right{
+        line-height: 10;
     }
     section#what-we-do,
     section#what-we-do .parallax{
-        height: 50rem;
+        height: 55rem;
         background-color: #0f290a;
     }
     section#careers,
     section#careers .parallax{
         /*height: 70rem;*/
-        height: 115rem;
+        height: 135rem;
     }
     /*section#job,
     section#job .parallax{
@@ -549,7 +592,7 @@ section#job .parallax{
     #team-8{ position:absolute; top: 32rem; left: 16rem;}
 
     .img-address{
-        margin: -6rem auto -16rem;
+        margin: -2rem auto -16rem;
     }
 }
 
@@ -572,11 +615,10 @@ section#job .parallax{
     section#job .parallax{
         height: 35rem;
     }*/
-    
     section#careers,
     section#careers .parallax{
         /*height: 48rem;*/
-        height: 90rem;
+        height: 95rem;
     }
     .team-wrapper{
         width: 47rem;
@@ -595,7 +637,7 @@ section#job .parallax{
         height: 11rem; 
     }*/
     #careers .jobs{
-        height: 11rem;
+        height: 20rem;
     }
     #open-source{
         text-align: right;
