--- a/website/css/css3.css
+++ b/website/css/css3.css
@@ -511,7 +511,7 @@ footer{
     padding: 0.5rem 3rem;
     position: relative;
     background-color: #f7f7f7;
-    min-height: 10vh;
+    min-height: 6rem;
 }
 
 .img-footer{
