--- a/website/css/css3.css
+++ b/website/css/css3.css
@@ -461,6 +461,28 @@ section#careers .parallax{
     right: 2rem;
     cursor: pointer;
 }
+/*#job-detail .tab-content .tab-pane ul{
+    list-style: none;
+    padding: 0;
+    text-align: center;
+}*/
+
+#job-detail .tab-content .tab-pane ul {
+    list-style: none;
+    padding:0;
+    margin:0;
+}
+
+#job-detail .tab-content .tab-pane li { 
+    padding-left: 1rem; 
+    text-indent: -.7rem;
+}
+
+#job-detail .tab-content .tab-pane li:before {
+    content: "• ";
+    color: #008a00;
+}
+
 /*
  job
  */
