--- a/website/css/css3.css
+++ b/website/css/css3.css
@@ -467,22 +467,33 @@ section#careers .parallax{
     /*height: 200vh;*/
 }
 .team-wrapper{
-    width: 23rem;
-    height: 70rem;
+    width: 20rem;
+    height: 40rem;
     margin: 0 auto;
     position: relative;
 }
-#team-1{ position:absolute; top: 0rem; left: 0rem;}
+.img-team{
+    width: 15rem;
+    margin: 0 auto;
+}
+#team-1{ display: none;}
+#team-2{ position:relative}
+#team-3{ display: none;}
+#team-4{ display: none;}
+#team-5{ position:relative}
+#team-6{ display: none;}
+#team-7{ position:relative}
+#team-8{ display: none;}
+
+/*#team-1{ position:absolute; top: 0rem; left: 0rem;}
 #team-2{ position:absolute; top: 8rem; left: 8rem;}
 #team-3{ position:absolute; top: 16rem; left: 0rem;}
 #team-4{ position:absolute; top: 24rem; left: 8rem;}
 #team-5{ position:absolute; top: 32rem; left: 0rem;}
 #team-6{ position:absolute; top: 40rem; left: 8rem;}
 #team-7{ position:absolute; top: 48rem; left: 0rem;}
-#team-8{ position:absolute; top: 56rem; left: 8rem;}
-.img-team{
-    width: 15rem;
-}
+#team-8{ position:absolute; top: 56rem; left: 8rem;}*/
+
 #careers{
     /*background-image: url('../img/careersS.jpg');*/
 }
@@ -643,7 +654,7 @@ section#what-we-do h2{
 }
 section#careers,
 section#careers .parallax{
-    height: 175rem;
+    height: 125rem;
 }
 section#careers h2{
     margin-top: 10rem;
@@ -688,7 +699,7 @@ section#job .parallax{
 /*Small devices (landscape phones, 34em and up)*/
 @media (min-width: 34em) {
     .waypoint{
-        opacity: 0;
+        /*opacity: 0; */ /* activate to have the fading affect */
         -webkit-transition: all 0.8s ease-out 0.2s;
         -moz-transition: all 0.8s ease-out 0.2s;
         -o-transition: all 0.8s ease-out 0.2s;
@@ -755,14 +766,14 @@ section#job .parallax{
         width: 30rem;
         height: 50rem;
     }
-    #team-1{ position:absolute; top: 0rem; left: 0rem;}
-    #team-2{ position:absolute; top: 0rem; left: 16rem;}
-    #team-3{ position:absolute; top: 8rem; left: 8rem;}
-    #team-4{ position:absolute; top: 16rem; left: 0rem;}
-    #team-5{ position:absolute; top: 16rem; left: 16rem;}
-    #team-6{ position:absolute; top: 24rem; left: 8rem;}
-    #team-7{ position:absolute; top: 32rem; left: 0rem;}
-    #team-8{ position:absolute; top: 32rem; left: 16rem;}
+    #team-1{ display:block; position:absolute; top: 0rem; left: 0rem;}
+    #team-2{ display:block; position:absolute; top: 0rem; left: 16rem;}
+    #team-3{ display:block; position:absolute; top: 8rem; left: 8rem;}
+    #team-4{ display:block; position:absolute; top: 16rem; left: 0rem;}
+    #team-5{ display:block; position:absolute; top: 16rem; left: 16rem;}
+    #team-6{ display:block; position:absolute; top: 24rem; left: 8rem;}
+    #team-7{ display:block; position:absolute; top: 32rem; left: 0rem;}
+    #team-8{ display:block; position:absolute; top: 32rem; left: 16rem;}
 
     .img-address{
         margin: -2rem auto -16rem;
