--- a/website/css/css3.css
+++ b/website/css/css3.css
@@ -93,7 +93,7 @@ ul.three-d li{
 
 .carousel {
     width: 100%;
-    margin: -1.5rem auto 0;
+    margin: 0 auto;
     z-index: 10;
 }
 .carousel-caption{
@@ -837,7 +837,7 @@ section#job .parallax{
     }
     #open-source{
         text-align: right;
-        margin-bottom: 0;
+        margin-bottom: -2rem;
     }
     #build-teams{
         text-align: left;   
