--- a/website/css/css3.css
+++ b/website/css/css3.css
@@ -415,7 +415,7 @@ section#team h3.title{
 .team-sprite{
     background-image: url('../img/all-sprite.jpg');
     background-repeat: no-repeat;
-    background-size: 500%;
+    background-size: 600%;
     width: 30%;
     height: 0;
     padding-bottom: 30%;
@@ -426,46 +426,49 @@ section#team h3.title{
     background-position: 0 0;
 }
 .team-sprite-2{
-    background-position: 25% 0;
+    background-position: 20% 0;
 }
 .team-sprite-3{
-    background-position: 50% 0;
+    background-position: 40% 0;
 }
 .team-sprite-4{
-    background-position: 75% 0;
+    background-position: 60% 0;
 }
 .team-sprite-5{
-    background-position: 100% 0;
+    background-position: 80% 0;
 }
 .team-sprite-6{
     background-position: 0 50%;
 }
 .team-sprite-7{
-    background-position: 25% 50%;
+    background-position: 20% 50%;
 }
 .team-sprite-8{
-    background-position: 50% 50%;
+    background-position: 40% 50%;
 }
 .team-sprite-9{
-    background-position: 75% 50%;
+    background-position: 60% 50%;
 }
 .team-sprite-10{
-    background-position: 100% 50%;
+    background-position: 80% 50%;
 }
 .team-sprite-11{
     background-position: 0 100%;
 }
 .team-sprite-12{
-    background-position: 25% 100%;
+    background-position: 20% 100%;
 }
 .team-sprite-13{
-    background-position: 50% 100%;
+    background-position: 40% 100%;
 }
 .team-sprite-14{
-    background-position: 75% 100%;
+    background-position: 60% 100%;
 }
 .team-sprite-15{
-    background-position: 100% 100%;
+    background-position: 80% 100%;
+}
+.team-sprite-16{
+    background-position: 100% 0;
 }
 
 /*
