--- a/website/css/css3.css
+++ b/website/css/css3.css
@@ -473,6 +473,9 @@ section#team h3.title{
 .team-sprite-16{
     background-position: 100% 0;
 }
+.team-sprite-17{
+    background-position: 100% 50%;
+}
 
 /*
  careers
