--- a/website/css/css3.css
+++ b/website/css/css3.css
@@ -517,6 +517,9 @@ section#team h3.title{
 .team-sprite2-8{
     background-position: 20% 50%;
 }
+.team-sprite2-9{
+    background-position: 40% 50%;
+}
 
 /*
  careers
