--- a/website/css/css3.css
+++ b/website/css/css3.css
@@ -30,7 +30,7 @@ img {
 }
 .nav-item.nav-link{
     word-spacing: 0;
-    letter-spacing: 0.05rem; 
+    letter-spacing: 0.05rem;
 }
 .c-g{
     color: #008a00;
@@ -91,7 +91,7 @@ ul.three-d li{
 /*
     Carousel
  */
-.carousel, 
+.carousel,
 .carousel-inner,
 .carousel-item {
     height: 15rem;
@@ -202,14 +202,14 @@ section h2.heading{
     padding: 0;
     position: relative;
 }
-.section .parallax, 
+.section .parallax,
 .section .full-image {
     width: 100%;
     height: 100vh;
     overflow: hidden;
     display: block;
 }
-.section .parallax > img, 
+.section .parallax > img,
 .section .full-image > img {
     min-width: 100%;
     min-height: 100%;
@@ -347,7 +347,7 @@ a span.scroll-arrow-inner{
     top: 100%;
     left: calc(50% - 2rem);
 }
-#about-us-carousel .carousel-indicators li, 
+#about-us-carousel .carousel-indicators li,
 #about-us-carousel .carousel-indicators li.active {
     border-radius: 0;
     width: 10px;
@@ -377,8 +377,8 @@ a span.scroll-arrow-inner{
     border: .2rem solid #008a00;
     background-color: #000;
 }
-#what-we-do-carousel.carousel, 
-#what-we-do-carousel .carousel-inner, 
+#what-we-do-carousel.carousel,
+#what-we-do-carousel .carousel-inner,
 #what-we-do-carousel .carousel-item{
     height: 25rem;
 }
@@ -520,6 +520,33 @@ section#team h3.title{
 .team-sprite2-9{
     background-position: 40% 50%;
 }
+.team-sprite2-10{
+    background-position: 60% 50%;
+}
+.team-sprite2-11{
+    background-position: 80% 50%;
+}
+.team-sprite2-12{
+    background-position: 100% 50%;
+}
+.team-sprite2-13{
+    background-position: 0 100%;
+}
+.team-sprite2-14{
+    background-position: 20% 100%;
+}
+.team-sprite2-15{
+    background-position: 40% 100%;
+}
+.team-sprite2-16{
+    background-position: 60% 100%;
+}
+.team-sprite2-17{
+    background-position: 80% 100%;
+}
+.team-sprite2-18{
+    background-position: 100% 100%;
+}
 
 /*
  careers
@@ -603,7 +630,7 @@ section#careers .parallax{
 }
 #job-detail .container{
     position: relative;
-} 
+}
 #job-detail .btn-close{
     font-size: 200%;
     position: absolute;
@@ -623,8 +650,8 @@ section#careers .parallax{
     margin:0;
 }
 
-#job-detail .tab-content .tab-pane li { 
-    padding-left: 1rem; 
+#job-detail .tab-content .tab-pane li {
+    padding-left: 1rem;
     text-indent: -.7rem;
 }
 
@@ -658,6 +685,8 @@ section#careers .parallax{
  */
 section#contact-us{
     height: 25rem;
+    background: #000;
+    z-index: 11;
 }
 .img-address{
     display: block;
@@ -681,8 +710,11 @@ footer{
     background-color: #f7f7f7;
     min-height: 6rem;
     color: #fff;
+    font-size: 12px;
 }
-
+footer.no-parallax {
+    z-index: 12;
+}
 .img-footer{
     width: 5rem;
     height: 5rem;
@@ -717,7 +749,7 @@ section#what-we-do h2{
 }
 section#careers,
 section#careers .parallax{
-    height: 135rem;
+    height: 150rem;
 }
 section#careers h2{
     margin-top: 10rem;
@@ -895,12 +927,12 @@ section#job .parallax{
     .black-ball{
         padding: .5rem 2rem;
     }
-    
-    .carousel, 
+
+    .carousel,
     .carousel-inner,
     .carousel-item,
-    #what-we-do-carousel.carousel, 
-    #what-we-do-carousel .carousel-inner, 
+    #what-we-do-carousel.carousel,
+    #what-we-do-carousel .carousel-inner,
     #what-we-do-carousel .carousel-item{
         height: 14rem;
     }
@@ -920,7 +952,7 @@ section#job .parallax{
     section#careers,
     section#careers .parallax{
         /*height: 70rem;*/
-        height: 148rem;
+        height: 158rem;
     }
     /*section#job,
     section#job .parallax{
@@ -949,7 +981,7 @@ section#job .parallax{
     #team-6{ display:block; position:absolute; top: 24rem; left: 8rem;}
     #team-7{ display:block; position:absolute; top: 32rem; left: 0rem;}
     #team-8{ display:block; position:absolute; top: 32rem; left: 16rem;}
-    
+
 
     .open-source{
         float:right;
@@ -963,7 +995,7 @@ section#job .parallax{
     }
 
     #careers .jobs{
-        height: 35rem;
+        height: 45rem;
     }
 }
 
@@ -1009,7 +1041,7 @@ section#job .parallax{
     #team-8{ position:absolute; top: 16rem; left: 32rem;}
 
     /*#job .jobs {
-        height: 11rem; 
+        height: 11rem;
     }*/
     #careers .jobs{
         height: 20rem;
