--- a/website/css/css3.css
+++ b/website/css/css3.css
@@ -548,6 +548,71 @@ section#team h3.title{
     background-position: 100% 100%;
 }
 
+.team-sprite3{
+    background-image: url('../img/all-sprite-3.jpg');
+    background-repeat: no-repeat;
+    background-size: 600%;
+    width: 30%;
+    height: 0;
+    padding-bottom: 30%;
+    border-radius: 50%;
+    float: left;
+}
+.team-sprite3-1{
+    background-position: 0 0;
+}
+.team-sprite3-2{
+    background-position: 20% 0;
+}
+.team-sprite3-3{
+    background-position: 40% 0;
+}
+.team-sprite3-4{
+    background-position: 60% 0;
+}
+.team-sprite3-5{
+    background-position: 80% 0;
+}
+.team-sprite3-6{
+    background-position: 100% 0;
+}
+.team-sprite3-7{
+    background-position: 0 50%;
+}
+.team-sprite3-8{
+    background-position: 20% 50%;
+}
+.team-sprite3-9{
+    background-position: 40% 50%;
+}
+.team-sprite3-10{
+    background-position: 60% 50%;
+}
+.team-sprite3-11{
+    background-position: 80% 50%;
+}
+.team-sprite3-12{
+    background-position: 100% 50%;
+}
+.team-sprite3-13{
+    background-position: 0 100%;
+}
+.team-sprite3-14{
+    background-position: 20% 100%;
+}
+.team-sprite3-15{
+    background-position: 40% 100%;
+}
+.team-sprite3-16{
+    background-position: 60% 100%;
+}
+.team-sprite3-17{
+    background-position: 80% 100%;
+}
+.team-sprite3-18{
+    background-position: 100% 100%;
+}
+
 /*
  careers
  */
@@ -964,7 +1029,8 @@ section#job .parallax{
         width: 100%;
     }
     .team-sprite,
-    .team-sprite2{
+    .team-sprite2,
+    .team-sprite3{
         width: 100%;
         padding-bottom: 100%;
         float: none;
